--- a/colors.toml
+++ b/colors.toml
@@ -2,8 +2,8 @@ accent = "#a277ff"
 cursor = "#a277ff"
 foreground = "#edecee"
 background = "#15141b"
-selection_foreground = "#110f18"
-selection_background = "#a277ff"
+selection_foreground = "#edecee"
+selection_background = "#29263c"
 
 color0 = "#110f18"
 color1 = "#ff6767"
