--- a/alacritty.toml
+++ b/alacritty.toml
@@ -32,7 +32,7 @@ red = "#ff6767"
 green = "#61ffca"
 yellow = "#ffca85"
 blue = "#a277ff"
-magenta = "#a277ff"
+magenta = "#8464c6"
 cyan = "#61ffca"
 white = "#edecee"
 
@@ -42,6 +42,6 @@ red = "#ff6767"
 green = "#61ffca"
 yellow = "#ffca85"
 blue = "#a277ff"
-magenta = "#a277ff"
+magenta = "#c17ac8"
 cyan = "#61ffca"
 white = "#edecee"
