--- a/colors.toml
+++ b/colors.toml
@@ -10,7 +10,7 @@ color1 = "#ff6767"
 color2 = "#61ffca"
 color3 = "#ffca85"
 color4 = "#a277ff"
-color5 = "#a277ff"
+color5 = "#8464c6"
 color6 = "#61ffca"
 color7 = "#edecee"
 color8 = "#4d4d4d"
@@ -18,6 +18,6 @@ color9 = "#ff6767"
 color10 = "#61ffca"
 color11 = "#ffca85"
 color12 = "#a277ff"
-color13 = "#a277ff"
+color13 = "#c17ac8"
 color14 = "#61ffca"
 color15 = "#edecee"
