--- a/ghostty.conf
+++ b/ghostty.conf
@@ -9,7 +9,7 @@ palette = 1=#ff6767
 palette = 2=#61ffca
 palette = 3=#ffca85
 palette = 4=#a277ff
-palette = 5=#a277ff
+palette = 5=#8464c6
 palette = 6=#61ffca
 palette = 7=#edecee
 palette = 8=#4d4d4d
@@ -17,6 +17,6 @@ palette = 9=#ff6767
 palette = 10=#61ffca
 palette = 11=#ffca85
 palette = 12=#a277ff
-palette = 13=#a277ff
+palette = 13=#c17ac8
 palette = 14=#61ffca
 palette = 15=#edecee
